:feat: new frontend features for the Relatorium project.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,9 +27,11 @@
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
     "@angular/service-worker": "^20.0.0",
+    "@supabase/supabase-js": "^2.75.0",
+    "country-telephone-data": "^0.6.3",
+    "dexie": "^4.2.1",
     "google-libphonenumber": "^3.2.43",
     "intl-tel-input": "^25.11.2",
-    "ngx-mask": "^20.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -38,8 +40,10 @@
     "@angular/build": "^20.0.4",
     "@angular/cli": "^20.0.4",
     "@angular/compiler-cli": "^20.0.0",
-    "@types/google-libphonenumber": "^7.4.30",
+    "@types/country-telephone-data": "^0.6.3",
+    "@types/intl-tel-input": "^18.1.4",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^24.7.0",
     "jasmine-core": "~5.7.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
