--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -30,6 +30,7 @@
               }
             ],
             "styles": [
+              "node_modules/intl-tel-input/build/css/intlTelInput.css",
               "src/styles.scss"
             ]
           },
